<resources>
    <string name="app_name" translatable="false">InTouch App</string>
    <string name="facebook_app_id" translatable="false">1196617070905586</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1196617070905586</string>
    <string name="facebook_client_token" translatable="false">272e06fd5656fa8e3735d0020f2ac180</string>
    <string name="hello">Hello</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fullname">Full Name</string>
    <string name="surname">Surname</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="join">Join</string>
    <string name="ping">Ping</string>
    <string name="intouch">InTouch</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="copy_link">Copy link</string>
    <string name="leave">Leave</string>
    <string name="group">Group</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="scheduled">Scheduled</string>
    <string name="change">Change</string>
    <string name="warning">Warning</string>
    <string name="attention">Attention</string>
    <string name="pings">Pings</string>
    <string name="unknown">Unknown</string>
    <string name="deleted_user">Deleted User</string>
    <string name="deleted_group">Deleted Group</string>
    <string name="great">Great!</string>
    <string name="scheduled_tittle">Scheduled!</string>
    <string name="sending_ping_title">Sending Ping</string>
    <string name="syncing_pings_title">Syncing Pings</string>
    <string name="success">Success!</string>
    <string name="clear">clear</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="group_settings">Group settings</string>
    <string name="join_or_create_a_group">Join or create a group</string>
    <string name="create">Create</string>
    <string name="intouch_logo" translatable="false">InTouch logo</string>
    <string name="group_ping_status">Group ping status</string>
    <string name="seen_ping_status_text">SEEN</string>
    <string name="schedule_ping">Schedule ping</string>
    <string name="schedule">schedule</string>
    <string name="add_emoji">Add emoji</string>
    <string name="delete_emoji">Delete emoji</string>
    <string name="send">Send</string>
    <string name="receiver">Receiver</string>
    <string name="intouch_app" translatable="false">InTouch App</string>
    <string name="new_ping_channel_name">New pings</string>
    <string name="channel_scheduled_name">Scheduled pings</string>
    <string name="syncing_pings_channel_name">Syncing new pings</string>
    <string name="new_ping" translatable="false">new_ping</string>
    <string name="new_ping_channel_id" translatable="false">show_New_Ping_Notification</string>
    <string name="schedule_channel_id" translatable="false">create_Schedule_Ping_Notification</string>
    <string name="syncing_pings_channel_id" translatable="false">syncing_pings_channel_id</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="ok">OK</string>
    <string name="send_ping">Send ping</string>
    <string name="change_email">Change email</string>
    <string name="new_email">New email</string>
    <string name="change_email_header">Attention</string>
    <string name="user_photo">User photo</string>
    <string name="group_photo">Group photo</string>
    <string name="register_new_account">Register new account</string>
    <string name="leave_the_group">Leave the group</string>
    <string name="send_ping_to_user">Send ping to user</string>
    <string name="send_ping_to_group">Send ping to group</string>
    <string name="join_group_edit_text_hint">Invitation link</string>
    <string name="create_group_hint">Group name</string>
    <string name="create_new_group_header">Create a new group</string>
    <string name="delete_photo">Delete photo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="already_registered">Already registered?</string>
    <string name="login_description">Please log in to start using the app</string>
    <string name="reset_password_email_helper">Please provide the email you used to register</string>
    <string name="rename_group_rename_current_group">Rename current group</string>
    <string name="rename_group_enter_group_name">Enter group name</string>
    <string name="rename_group_hint">Current group name</string>
    <string name="join_another_group_dialog_title">Join another group</string>
    <string name="join_another_group_dialog_message">Are you sure that you want to join </string>
    <string name="join_another_group_dialog_group_word">group?</string>
    <string name="join_group_already_being_there_error">You are already in this group</string>
    <string name="upload_change_photo">Upload/change photo</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="job_position">Job position</string>
    <string name="your_job_position">Your job position</string>
    <string name="delete_account">Delete account</string>
    <string name="image_upload_success">Photo uploaded successfully</string>
    <string name="image_upload_fail">Failed to upload photo</string>
    <string name="photo_delete_success">Photo deleted successfully</string>
    <string name="photo_delete_fail">Failed to delete photo</string>
    <string name="to_double_dot">To:</string>
    <string name="sent_double_dot">Sent:</string>
    <string name="scheduled_double_dot">SCHEDULED:</string>
    <string name="group_ping">Group ping</string>
    <string name="load_received_pings_failure">Failed to load received pings</string>
    <string name="no_received_pings">You haven’t received any pings yet</string>
    <string name="new_ping_from">New Ping from</string>
    <string name="repeat_double_dot">REPEAT:</string>
    <string name="recurring_ping_message_daily">Will be sent on %1$s</string>
    <string name="repeat_daily_details">Every day at %1$s:%2$s</string>
    <string name="repeat_weekly_details">%1$s at %2$s:%3$s</string>
    <string name="repeat_monthly_details">The %1$sth day of each month at %2$s:%3$s</string>
    <string name="repeat_yearly_details">Every year on %1$s %2$sth at %3$s:%4$s</string>
    <string name="to_log_back_in">To log back in you will need to re-enter your email and password</string>
    <string name="check_your_inbox">Check your inbox!</string>
    <string name="password_reset_link">A password reset link was sent to the email you specified</string>
    <string name="success_star">Success star</string>
    <string name="are_you_sure_you_want_to_delete_photo">Are you sure you want to delete your profile photo?</string>
    <string name="invalid_login_credentials">Entered email/password is invalid</string>
    <string name="invalid_email">Please enter the email in the valid format (e.g. mail@example.com)</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="invalid_join_link_error">Please, enter a valid invitation link</string>
    <string name="verify_email_message">Please, verify your email</string>
    <string name="invalid_user_email">Invalid email, such user does not exist</string>
    <string name="too_many_requests">Too many requests, try again later</string>
    <string name="empty_field">Please fill out this field</string>
    <string name="no_receiver_selected">Please select a receiver from suggestions.</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_google_account_found_error">No Google Accounts found</string>
    <string name="failed_to_sign_in_via_google">Failed to SignInViaGoogle: IdToken is empty</string>
    <string name="join_group_bring_already_in_error">You are already in this group</string>
    <string name="rename_group_fail">Failed to rename the group</string>
    <string name="job_position_updated">Job position updated successfully</string>
    <string name="job_position_too_long">Job name should be 64 characters or less</string>
    <string name="job_position_invalid_chars">Please use letters or space</string>
    <string name="job_position_fail">Failed to set job position</string>
    <string name="hide_user_info_fail">Failed to hide your info</string>
    <string name="select_source">Select source</string>
    <string name="delete_account_message">All your data will be erased.\nThis cannot be undone.\nPlease enter your current password to confirm this action</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_screen_title">Restore password</string>
    <string name="reset_password_success_message">Reset link has been sent to your email.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_email_message">To continue with the app please check your email inbox for a confirmation link</string>
    <string name="email_confirmed">Email confirmed</string>
    <string name="send_verification_link">Send verification again</string>
    <string name="enter_name">Please fill in your name</string>
    <string name="name_validation_message">Please use letters, numbers, -, \' or space</string>
    <string name="enter_surname">Enter surname</string>
    <string name="surname_validation_message">Enter valid surname</string>
    <string name="enter_email">Enter email</string>
    <string name="email_validation_message">Please enter your email in the valid format (e.g. mail@example.com)</string>
    <string name="enter_password">Enter password</string>
    <string name="email_confirmed_successfully">Email has been confirmed</string>
    <string name="confirm_email_send">Confirmation email has been sent</string>
    <string name="permission_to_manage_personal_data">I explicitly consent to InTouch App collecting and processing user data specified above</string>
    <string name="create_new_group_message">Add a group name and send invitation links <br />to group members</string>
    <string name="create_group_name_too_long_message">Group name should be 64 characters or less</string>
    <string name="create_group_name_invalid_symbols">Please, enter a valid group name</string>
    <string name="join_group_message">If you have an invitation link, paste it below.\nYou can be a member of only one group at a time</string>
    <string name="join_group_header">Join an existing group</string>
    <string name="join_unexisting_group_error">Such group does not exist</string>
    <string name="tip_to_start_using_app">Please register to start using the app</string>
    <string name="please_give_your_consent_to_data_processing_to_continue">Please give your consent to data processing to continue</string>
    <string name="visible_to_users">Will be visible to other users</string>
    <string name="send_verification_link_to_email">We will send a verification link to it</string>
    <string name="password_validation_rules">Min 8 characters long, uppercase+lowercase+numbers</string>
    <string name="status_active_group">Active</string>
    <string name="user_muted_status">User muted status</string>
    <string name="mute_group">Notification off</string>
    <string name="group_name" translatable="false">group name</string>
    <string name="group_avatar" translatable="false">group_avatar</string>
</resources>