<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="4dp"
    android:paddingVertical="8dp">

    <ImageView
        android:id="@+id/groupPhoto"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/group_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_default_group_avatar" />

    <TextView
        android:id="@+id/recyclerGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="25dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        app:fontFamily="@font/poppins_bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/groupPhoto"
        app:layout_constraintEnd_toStartOf="@+id/group_status"
        app:layout_constraintStart_toEndOf="@+id/groupPhoto"
        app:layout_constraintTop_toTopOf="@+id/groupPhoto"
        app:layout_constraintHorizontal_bias="0"
        tools:text="@string/group"
        />

    <ImageView
        android:id="@+id/muted_icon"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/user_muted_status"
        android:src="@drawable/ic_muted"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/recyclerGroupName"
        app:layout_constraintTop_toTopOf="@+id/recyclerGroupName"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerGroupName"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/group_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/status_active_group"
        android:textAllCaps="true"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerGroupName"
        app:layout_constraintEnd_toStartOf="@+id/sendPingToGroupInRecycler"
        app:layout_constraintTop_toTopOf="@+id/recyclerGroupName" />

    <ImageView
        android:id="@+id/sendPingToGroupInRecycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/send_ping_to_group"
        app:layout_constraintBottom_toBottomOf="@+id/group_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group_status"
        app:srcCompat="@drawable/get_intouch_quick" />

    <ImageButton
        android:id="@+id/muteGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/sendPingToGroupInRecycler"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/sendPingToGroupInRecycler"
        android:contentDescription="@string/mute_group" />
</androidx.constraintlayout.widget.ConstraintLayout>