<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/intouch_background"
    tools:context=".registration.RegistrationActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/inTouchLogo"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/logo_margin_top"
                android:contentDescription="@string/intouch_logo"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/textViewHello"
                style="@style/InTouchHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:includeFontPadding="false"
                android:text="@string/hello"
                android:textSize="@dimen/hello_text_size" />

            <TextView
                android:id="@+id/textViewStartApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal|top"
                android:text="@string/tip_to_start_using_app"
                android:textSize="@dimen/small_text_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/personName"
                style="@style/InTouchInputFieldWithBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/registration_horizontal_margin"
                android:layout_marginTop="24dp"
                android:hint="@string/fullname"
                app:errorTextAppearance="@style/ErrorTextAppearance"
                app:helperText="@string/visible_to_users"
                app:hintTextColor="@color/intouch_neutral_01">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAddress"
                style="@style/InTouchInputFieldWithBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/registration_horizontal_margin"
                android:layout_marginTop="@dimen/input_fields_middle_margin"
                android:hint="@string/email"
                app:errorTextAppearance="@style/ErrorTextAppearance"
                app:helperText="@string/send_verification_link_to_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/InTouchPasswordInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/registration_horizontal_margin"
                android:layout_marginTop="@dimen/input_fields_middle_margin"
                android:hint="@string/password"
                app:errorTextAppearance="@style/ErrorTextAppearance"
                app:helperText="@string/password_validation_rules">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/registration_horizontal_margin"
                android:layout_marginEnd="16dp"
                android:button="@drawable/custom_checkbox"
                android:letterSpacing="0.03"
                android:paddingVertical="11dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/permission_to_manage_personal_data"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/consentError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/registration_horizontal_margin"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="27dp"
                android:gravity="center"
                android:letterSpacing="0.03"
                android:text="@string/please_give_your_consent_to_data_processing_to_continue"
                android:textColor="@color/intouch_error"
                android:textSize="@dimen/error_text_size"
                android:visibility="invisible"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonRegister"
        style="@style/InTouchButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/registration_horizontal_margin"
        android:lines="1"
        android:paddingVertical="@dimen/yellow_button_vertical_padding"
        android:text="@string/register_new_account"
        android:textSize="16sp"
        android:visibility="visible"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="6sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/buttonAlreadyRegistered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <Button
        android:id="@+id/buttonAlreadyRegistered"
        style="@style/InTouchTransparentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_button_margin"
        android:lines="1"
        android:text="@string/already_registered"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="6sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/google_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/google_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/center_vertical_guideline" />

    <ImageButton
        android:id="@+id/facebook_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/center_vertical_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
