<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/intouch_primary_04"
    android:minWidth="328dp">

    <ImageView
        android:id="@+id/groupItemImage"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/ic_default_group_avatar"
        android:contentDescription="@string/group_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/group_name"
        android:textColor="@color/intouch_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupItemImage" />

    <Button
        android:id="@+id/muteGroupButton"
        style="@style/InTouchTransparentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_muteusericon"
        android:text="@string/mute_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_name" />

    <Button
        android:id="@+id/sendPingButton"
        style="@style/InTouchTransparentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_send_ping_icon"
        android:text="@string/send_ping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/muteGroupButton" />


</androidx.constraintlayout.widget.ConstraintLayout>